--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GROQ_API_KEY=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
 HuggingFace_API_KEY=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
 OPENAI_API_KEY=sk-O0mS3pXKJH3kT8W5r7BT3BlbkFJHHW8n5Y4Vqz6gD3Z4g9
 LANGCHAIN_API_KEY=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 
+Gemini_API_KEY=AIzaSyCvdTpL-gPh9xnnsweFmr9cxtbyvThY9nI
